Fixed mobile layout issues

--- a/wp-content/themes/riwa/less/buttons.less
+++ b/wp-content/themes/riwa/less/buttons.less
@@ -12,7 +12,7 @@
 
         border: 2px solid @white;
         border-radius: 0;
-        padding: 2px 8px;
+        padding: 6px 8px;
 
         color: @white;
 
